--- a/css/main.css
+++ b/css/main.css
@@ -2026,7 +2026,7 @@ body {
   color: #2c3336;
   font-weight: 400;
   font-size: 22px;
-  line-height: 1.4;
+  line-height: 1.3;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -2124,27 +2124,19 @@ body {
   padding: 0 30px;
   justify-content: center;
   align-items: center;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 16px;
-  color: #2c3336;
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
   transition: all 0.2s ease-in-out;
-  background: #FFEDF2;
+  background: #920606;
   border: 0;
   cursor: pointer;
 }
-.btn:hover {
-  background: #F1CED8;
-}
-.btn_dark {
-  background: #F1CED8;
-}
-.btn_dark:hover {
-  background: #D194A5;
-}
-
-.article {
-  padding: 106px 0;
+.btn:hover, .btn:focus, .btn:visited, .btn:active {
+  background: #7F0505;
+  color: #fff;
 }
 
 .soclist {
@@ -2173,54 +2165,6 @@ body {
   height: 60px;
   transition: all 0.2s ease-in-out;
   fill: #4A5644;
-}
-
-.intro {
-  display: flex;
-  height: 900px;
-  justify-content: space-between;
-  gap: 40px;
-  background: url(../img/intro.jpg) no-repeat center top/cover;
-}
-.intro__desc {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 550px;
-}
-.intro .container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.intro__sub {
-  max-width: 480px;
-  margin-bottom: 36px;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 27px;
-  text-align: center;
-  margin-bottom: 48px;
-}
-.intro__pic {
-  flex: 0 0 390px;
-  position: relative;
-}
-.intro__pic-img {
-  width: 368px;
-  height: 520px;
-  border-radius: 300px;
-  position: relative;
-  z-index: 10;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.intro__pic-bg {
-  position: absolute;
-  display: block;
-  bottom: -27px;
-  left: -27px;
-  max-width: 416px;
 }
 
 .title {
@@ -2447,4 +2391,60 @@ body {
 }
 .form .soclist__socpic {
   fill: #FFEDF2;
+}
+
+.article {
+  padding: 106px 0;
+}
+
+.intro {
+  position: relative;
+  display: flex;
+  height: 900px;
+  justify-content: space-between;
+  gap: 40px;
+  background: url(../img/intro.jpg) no-repeat center top/cover;
+  align-items: stretch;
+  padding: 0;
+}
+.intro__desc {
+  position: relative;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 550px;
+}
+.intro__desc p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 22px;
+  color: #000;
+  margin-bottom: 37px;
+}
+.intro .container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: relative;
+  overflow: visible;
+}
+.intro .container:after {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 1100px;
+  width: 1400px;
+  background: url(../img/ellipse_old.png) no-repeat left center/contain;
+  top: -100px;
+  left: calc(100% - 700px);
+}
+
+.subtitle {
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 34px;
+  text-transform: uppercase;
+  color: #7b1b14;
+  margin-bottom: 18px;
 }/*# sourceMappingURL=main.css.map */
