--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,6 @@ a:active {
   text-decoration: none;
   position: relative;
   transition: all 0.2s ease-in-out;
-  color: #2c3336;
 }
 
 ul {
@@ -2026,7 +2025,7 @@ body {
   color: #2c3336;
   font-weight: 400;
   font-size: 22px;
-  line-height: 1.3;
+  line-height: 1.2;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -2134,9 +2133,8 @@ body {
   border: 0;
   cursor: pointer;
 }
-.btn:hover, .btn:focus, .btn:visited, .btn:active {
+.btn:hover, .btn:focus, .btn:active {
   background: #7F0505;
-  color: #fff;
 }
 
 .soclist {
@@ -2447,4 +2445,67 @@ body {
   text-transform: uppercase;
   color: #7b1b14;
   margin-bottom: 18px;
+}
+
+.about {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 70px;
+}
+.about__desc {
+  flex: 1 0 540px;
+}
+.about__text {
+  font-family: var(--second-family);
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 22px;
+}
+.about__list {
+  padding: 0;
+  margin: 0;
+}
+.about__list li {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 111%;
+  margin-bottom: 16px;
+  padding-left: 16px;
+  position: relative;
+}
+.about__list li:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: #920606;
+  top: 8px;
+  left: 0px;
+  border-radius: 30px;
+}
+.about__list li:last-child {
+  margin-bottom: 0;
+}
+.about__pic {
+  width: 100%;
+}
+
+.online {
+  background: #f7f7f7;
+  gap: 70px;
+}
+.online .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.online__pic {
+  width: 200px;
+  height: 100%;
+}
+.online__desc {
+  flex: 1 0 680px;
 }/*# sourceMappingURL=main.css.map */
