--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ body {
     color: #2c3336;
     font-weight: 400;
     font-size: 22px;
-    line-height: 1.3;
+    line-height: 1.2;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -142,10 +142,9 @@ body {
 
     &:hover,
     &:focus,
-    &:visited,
+    //&:visited,
     &:active {
         background: #7F0505;
-        color: #fff;
     }
 }
 .soclist {
@@ -494,10 +493,7 @@ body {
         }
     }
 }
-.container {
-}
-.wow {
-}
+
 .animate {
     &__animated {}
     &__fadeIn {}
@@ -513,14 +509,68 @@ body {
     margin-bottom: 18px;
 }
 .about {
-    &__desc {}
-    &__text {}
-    &__list {}
-    &__pic {}
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 70px;
+    &__desc {
+        //width: 540px;
+        flex: 1 0 540px;
+    }
+    &__text {
+        font-family: var(--second-family);
+        font-weight: 600;
+        font-size: 22px;
+        margin-bottom: 22px;
+    }
+    &__list {
+        padding: 0;
+        margin: 0;
+        
+        li{
+            font-family: var(--font-family);
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 111%;
+            margin-bottom: 16px;
+            padding-left: 16px;
+            position: relative;
+            &:after{
+                content: '';
+                display: block;
+                position: absolute;
+                width: 6px;
+                height: 6px;
+                background: #920606;
+                top: 8px;
+                left: 0px;
+                border-radius: 30px;
+            }
+            &:last-child{
+                margin-bottom: 0;
+            }
+        }
+    }
+    &__pic {
+        width: 100%;
+    }
 }
 .online {
-    &__pic {}
-    &__desc {}
+    background: #f7f7f7;
+    gap: 70px;
+    .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    &__pic {
+        width: 200px;
+        height: 100%;
+        
+    }
+    &__desc {
+        flex: 1 0 680px;
+    }
     &__list {}
 }
 .client {
