--- a/css/main.scss
+++ b/css/main.scss
@@ -181,17 +181,6 @@ body {
     }
 }
 
-.title {
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 56px;
-    margin-bottom: 48px;
-    text-transform: uppercase;
-    max-width: 914px;
-    text-align: center;
-    letter-spacing: 0.02em;
-
-}
 
 .wow {
     visibility: hidden;
@@ -499,6 +488,12 @@ body {
     &__fadeIn {}
 }
 .title {
+    font-family: var(--second-family);
+    font-weight: 700;
+    font-size: 48px;
+    text-transform: uppercase;
+    color: #920606;
+    margin-bottom: 52px;
 }
 .subtitle {
     font-family: var(--second-family);
@@ -590,12 +585,72 @@ body {
     }
 }
 .client {
+    .title {
+        text-align: center;
+    }
+    &__wrap{
+        position: relative;
+    }
+    .swiper-container {
+        width: 1100px;
+        height: auto;
+    }
+    .swiper-wrapper {
+    }
+    .swiper-slide {
+    }
+    .swiper-pagination {
+    }
+    .swiper-button{
+        background: none;
+        display: flex;
+        align-items: center;
+        svg{
+            width: 40px;
+            height: 40px;;
+            fill: transparent;
+            stroke: $black;
+            stroke-width: 3;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+            transition: all .15s ease;
+            transform: var(--f-button-transform);
+            filter: var(--f-button-svg-filter);
+            pointer-events: none;
+            opacity: .6;
+        }
+        &:hover{
+            svg{
+                stroke: #000;
+                opacity: 1;
+            }
+        }
+    }
+    .swiper-button-prev {
+        transform: rotate(180deg);
+        left: 0;
+    }
+    .swiper-button-next {
+        right: 0;
+    }
+    .swiper-button-disabled{
+        opacity: 0;
+    }
 }
 .swiper-container {
 }
 .swiper-wrapper {
 }
 .swiper-slide {
+    cursor: pointer;
+    img{
+        transition: all 0.2s;
+        border: 1px solid transparent;
+        &:hover{
+            border-color: #920606;;
+            border-radius: 4px;
+        }
+    }
 }
 .swiper-pagination {
 }
