--- a/css/main.scss
+++ b/css/main.scss
@@ -111,7 +111,7 @@ body {
 
 .fancybox__thumbs.is-classic .f-thumbs__slide:hover,
 .fancybox__thumbs.is-classic .f-thumbs__slide.is-nav-selected {
-    border: 1px solid #6b7280;
+    border: 1px solid #920606;
 }
 
 
@@ -126,7 +126,7 @@ body {
 
 .btn {
     display: inline-flex;
-    height: 62px;
+    height: 70px;
     padding: 0 30px;
     justify-content: center;
     align-items: center;
@@ -307,132 +307,54 @@ body {
 }
 
 .form {
-    background: #4A5644;
-    color: #fff;
-    padding: 0;
-
+    background: url(../img/bg.jpg) no-repeat center center / cover;
     .container {
         display: flex;
-        gap: 72px;
+        flex-direction: column;
+        align-items: center;
     }
-
-    &__pic {
-        min-width: 658px;
-        background: url(../img/form_bg.jpg) no-repeat center center / cover;
+    .form__title {
+        font-family: var(--second-family);
+        font-weight: 700;
+        font-size: 36px;
+        text-transform: uppercase;
+        text-align: center;
+        width: 738px;
+        margin-bottom: 24px;
     }
-
+    .form__text {
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 22px;
+        text-align: center;
+        color: #2c3336;
+        margin-bottom: 48px;
+    }
     &__wrap {
-        padding: 82px 0;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-
-        .title {
-            font-size: 36px;
-            line-height: 42px;
-            margin-bottom: 30px;
-        }
-
-        p {
-            margin-bottom: 48px;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start
-        }
-
+        align-items: stretch;
+        width: 526px;
         input {
             display: block;
             margin-bottom: 18px;
             width: 100%;
-            height: 62px;
-            background: rgba(255, 255, 255, 0.45);
+            height: 82px;
+            background: #fff;
             border: 0;
-            padding: 0 20px;
+            padding: 0 40px;
             font-size: 18px;
-
             &::placeholder {
-                color: #272727;
-                opacity: 1;
+                font-family: var(--second-family);
+                font-weight: 600;
+                font-size: 20px;
+                color: rgba(44, 51, 54, 0.5);
+                //opacity: 1;
             }
         }
-
-        .btn {
-            margin-top: 22px;
-            margin-bottom: 48px;
-        }
-    }
-
-    &__mail {
-        color: #fff;
-        display: inline-block;
-        margin-bottom: 30px;
-
-        &:hover {
-            color: #fff;
-        }
-
-        &:before {
-            content: "";
-            width: 0;
-            height: 1px;
-            position: absolute;
-            bottom: -5px;
-            right: 0;
-            background: #fff;
-            transition: all 0.2s ease-in-out;
-        }
-
-        &:hover::before {
-            width: 100%;
-            left: 0;
-        }
-    }
-
-    &__tel {
-        color: #fff;
-        margin-bottom: 60px;
-        display: inline-block;
-
-        &:hover {
-            color: #fff;
-        }
-
-        &:before {
-            content: "";
-            width: 0;
-            height: 1px;
-            position: absolute;
-            bottom: -5px;
-            right: 0;
-            background: #fff;
-            transition: all 0.2s ease-in-out;
-        }
-
-        &:hover::before {
-            width: 100%;
-            left: 0;
-        }
-
-    }
-
-    .soclist {
-        &__soc {
-            border-color: #FFEDF2;
-
-            &:hover {
-                border-color: #D194A5;
-
-                .soclist__socpic {
-                    fill: #D194A5;
-                }
-            }
-        }
-
-        &__socpic {
-            fill: #FFEDF2;
+        .btn{
+            height: 82px;
+            margin-top: 38px;
         }
     }
 }
@@ -647,7 +569,7 @@ body {
         transition: all 0.2s;
         border: 1px solid transparent;
         &:hover{
-            border-color: #920606;;
+            border-color: #920606;
             border-radius: 4px;
         }
     }
