--- a/css/main.css
+++ b/css/main.css
@@ -2108,7 +2108,7 @@ body {
 
 .fancybox__thumbs.is-classic .f-thumbs__slide:hover,
 .fancybox__thumbs.is-classic .f-thumbs__slide.is-nav-selected {
-  border: 1px solid #6b7280;
+  border: 1px solid #920606;
 }
 
 /*end fixed footer*/
@@ -2119,7 +2119,7 @@ body {
 
 .btn {
   display: inline-flex;
-  height: 62px;
+  height: 70px;
   padding: 0 30px;
   justify-content: center;
   align-items: center;
@@ -2270,114 +2270,61 @@ body {
 }
 
 .form {
-  background: #4A5644;
-  color: #fff;
-  padding: 0;
+  background: url(../img/bg.jpg) no-repeat center center/cover;
 }
 .form .container {
   display: flex;
-  gap: 72px;
-}
-.form__pic {
-  min-width: 658px;
-  background: url(../img/form_bg.jpg) no-repeat center center/cover;
-}
-.form__wrap {
-  padding: 82px 0;
-  display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
-.form__wrap .title {
+.form .form__title {
+  font-family: var(--second-family);
+  font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
-  margin-bottom: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  width: 738px;
+  margin-bottom: 24px;
 }
-.form__wrap p {
+.form .form__text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 22px;
+  text-align: center;
+  color: #2c3336;
   margin-bottom: 48px;
 }
-.form__wrap form {
+.form__wrap {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: stretch;
+  width: 526px;
 }
 .form__wrap input {
   display: block;
   margin-bottom: 18px;
   width: 100%;
-  height: 62px;
-  background: rgba(255, 255, 255, 0.45);
+  height: 82px;
+  background: #fff;
   border: 0;
-  padding: 0 20px;
+  padding: 0 40px;
   font-size: 18px;
 }
 .form__wrap input::-moz-placeholder {
-  color: #272727;
-  opacity: 1;
+  font-family: var(--second-family);
+  font-weight: 600;
+  font-size: 20px;
+  color: rgba(44, 51, 54, 0.5);
 }
 .form__wrap input::placeholder {
-  color: #272727;
-  opacity: 1;
+  font-family: var(--second-family);
+  font-weight: 600;
+  font-size: 20px;
+  color: rgba(44, 51, 54, 0.5);
 }
 .form__wrap .btn {
-  margin-top: 22px;
-  margin-bottom: 48px;
-}
-.form__mail {
-  color: #fff;
-  display: inline-block;
-  margin-bottom: 30px;
-}
-.form__mail:hover {
-  color: #fff;
-}
-.form__mail:before {
-  content: "";
-  width: 0;
-  height: 1px;
-  position: absolute;
-  bottom: -5px;
-  right: 0;
-  background: #fff;
-  transition: all 0.2s ease-in-out;
-}
-.form__mail:hover::before {
-  width: 100%;
-  left: 0;
-}
-.form__tel {
-  color: #fff;
-  margin-bottom: 60px;
-  display: inline-block;
-}
-.form__tel:hover {
-  color: #fff;
-}
-.form__tel:before {
-  content: "";
-  width: 0;
-  height: 1px;
-  position: absolute;
-  bottom: -5px;
-  right: 0;
-  background: #fff;
-  transition: all 0.2s ease-in-out;
-}
-.form__tel:hover::before {
-  width: 100%;
-  left: 0;
-}
-.form .soclist__soc {
-  border-color: #FFEDF2;
-}
-.form .soclist__soc:hover {
-  border-color: #D194A5;
-}
-.form .soclist__soc:hover .soclist__socpic {
-  fill: #D194A5;
-}
-.form .soclist__socpic {
-  fill: #FFEDF2;
+  height: 82px;
+  margin-top: 38px;
 }
 
 .article {
